tests/fail_syntax/literal_none_get_regex.stderr
error: At least 1 Parameters required: Missing format string
 --> $DIR/literal_none_get_regex.rs:2:5
  |
2 |     sscanf::scanf_get_regex!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
