tests/fail_syntax/literal_none_get_regex.rs
fn main() {
    sscanf::scanf_get_regex!();
}
